Reorganize how child components are loaded, use to build out redirects

--- a/app/views/tenon/assets/_sidebar_index.html.haml
+++ b/app/views/tenon/assets/_sidebar_index.html.haml
@@ -1,4 +1,4 @@
-- content_for :sidebar do
+.sidebar-container
   #new-asset{:style => "display: none;"}= render "form", multiple: true
   .sidebar
     .content
