--- a/app/views/tenon/events/index.html.haml
+++ b/app/views/tenon/events/index.html.haml
@@ -2,4 +2,4 @@
     title: 'Events',
     recordsPath: events_path(format: 'json'),
     newPath: new_event_path,
-    childComponents: { record: 'EventRecord'}
+    childComponentNames: { Record: 'EventRecord'}
