--- a/app/views/tenon/users/index.html.haml
+++ b/app/views/tenon/users/index.html.haml
@@ -1,23 +1,5 @@
-- content_for :sidebar do
-  .sidebar
-    .content
-      %h2 Users
-      = link_to "New User", new_user_path, class: 'btn btn-block btn-primary'
-
-%header
-  %h1 Users
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-    .header-button
-      = link_to '#', id: 'quick-search-toggle' do
-        .header-icon= fa_icon('fw search')
-
-.toolbox
-  = render "tenon/shared/section_header/quick_search", record_list: '#users'
-
-.main-content
-  %ul#users.record-list{data: {records: {url: users_path(format: 'json'), template: 'tenon/templates/users/user_row', name: 'user'}}}
-
-  = link_to "Load More Users", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#users'
+= react_component 'ResourceIndexRoot',
+    title: 'Users',
+    recordsPath: users_path(format: 'json'),
+    newPath: new_user_path,
+    childComponents: { record: 'UserRecord'}
