--- a/app/views/tenon/comments/index.html.haml
+++ b/app/views/tenon/comments/index.html.haml
@@ -1,19 +1,20 @@
 = render "sidebar_index"
 
-%header
-  %h1 Comments
+.page-wrap
+  %header
+    %h1 Comments
 
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
+    .tools
+      = render "tenon/shared/section_header/sidebar_toggle"
 
-    .header-button
-      = link_to '#', id: 'quick-search-toggle' do
-        .header-icon= fa_icon('fw search')
+      .header-button
+        = link_to '#', id: 'quick-search-toggle' do
+          .header-icon= fa_icon('fw search')
 
-.toolbox
-  = render "tenon/shared/section_header/quick_search", record_list: '#comments'
+  .toolbox
+    = render "tenon/shared/section_header/quick_search", record_list: '#comments'
 
-.main-content
-  %ul#comments.record-list.with-thumbnail{data: {records: {url: comments_path(format: 'json'), template: 'tenon/templates/comments/comment_row', name: 'comment'}}}
+  .main-content
+    %ul#comments.record-list.with-thumbnail{data: {records: {url: comments_path(format: 'json'), template: 'tenon/templates/comments/comment_row', name: 'comment'}}}
 
-  = link_to "Load More Comments", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#comments'
+    = link_to "Load More Comments", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#comments'
