--- a/app/views/tenon/events/_form.html.haml
+++ b/app/views/tenon/events/_form.html.haml
@@ -1,4 +1,4 @@
-- content_for :sidebar do
+.sidebar-container
   .sidebar
     .content
       %h2 Events
@@ -6,39 +6,47 @@
 
     = i18n_language_nav(:'tenon/events')
 
-= error_messages_for :event
+.page-wrap
+  %header
+    %h1= form_header_for(@event)
 
-= autosaving_form_for @event do |f|
-  .fields.large
-    .form-group= f.text_field :title
-    .form-group
-      = f.tenon_content :description
+    .tools
+      = render "tenon/shared/section_header/sidebar_toggle"
 
-  .fields.small
-    %h4.box-label Event Details
-    .box
-      .form-group.bordered= f.text_field :location, :placeholder => '--'
-      .form-group.bordered
-        = f.text_field :starts_at, data: {behaviour: 'datetime-picker'}, placeholder: '--'
-      .form-group.bordered
-        = f.text_field :ends_at, data: {behaviour: 'datetime-picker'}, placeholder: '--'
+  .main-content
+    = error_messages_for :event
 
-    %h4.box-label Publish Your Event
-    .box
-      .form-group
-        = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
+    = autosaving_form_for @event do |f|
+      .fields.large
+        .form-group= f.text_field :title
+        .form-group
+          = f.tenon_content :description
 
-      .row.content
-        - if can?(:publish, @event)
-          %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
-        - if can?(:create, Tenon::ItemVersion)
-          = save_draft_button(@event)
-          .last-autosave
+      .fields.small
+        %h4.box-label Event Details
+        .box
+          .form-group.bordered= f.text_field :location, :placeholder => '--'
+          .form-group.bordered
+            = f.text_field :starts_at, data: {behaviour: 'datetime-picker'}, placeholder: '--'
+          .form-group.bordered
+            = f.text_field :ends_at, data: {behaviour: 'datetime-picker'}, placeholder: '--'
 
-      %hr
-      .content
-        = clear_draft_link if params[:version]
-        = load_draft_link(@event)
-        - if @event.persisted?
-          = link_to "Delete", @event, :data => {:method => :delete, :confirm => "Are you sure you want to delete this?"}, :class => 'delete-link'
+        %h4.box-label Publish Your Event
+        .box
+          .form-group
+            = f.text_field :publish_at, label: "Publish Date", data: {behaviour: 'datetime-picker'}, placeholder: '--'
+
+          .row.content
+            - if can?(:publish, @event)
+              %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
+            - if can?(:create, Tenon::ItemVersion)
+              = save_draft_button(@event)
+              .last-autosave
+
+          %hr
+          .content
+            = clear_draft_link if params[:version]
+            = load_draft_link(@event)
+            - if @event.persisted?
+              = link_to "Delete", @event, :data => {:method => :delete, :confirm => "Are you sure you want to delete this?"}, :class => 'delete-link'
 
