--- a/app/views/tenon/galleries/new.html.haml
+++ b/app/views/tenon/galleries/new.html.haml
@@ -1,8 +1,1 @@
-%header
-  %h1 New Gallery
-
-  .tools
-    = render "tenon/shared/section_header/sidebar_toggle"
-
-.main-content
-  = render :partial => "form"
+= render 'form'
