--- a/app/views/tenon/contacts/index.html.haml
+++ b/app/views/tenon/contacts/index.html.haml
@@ -1,20 +1,4 @@
-= render "sidebar_index"
-
-.page-wrap
-  %header
-    %h1 Contacts
-
-    .tools
-      = render "tenon/shared/section_header/sidebar_toggle"
-
-      .header-button
-        = link_to '#', id: 'quick-search-toggle' do
-          .header-icon= fa_icon('fw search')
-
-  .toolbox
-    = render "tenon/shared/section_header/quick_search", record_list: '#contacts'
-
-  .main-content
-    %ul#contacts.record-list{data: {records: {url: contacts_path(format: 'json'), template: 'tenon/templates/contacts/contact_row', name: 'contact'}}}
-
-    = link_to "Load More Contacts", '#', :class => 'btn btn-comp infinite-loader', 'data-record-list' => '#contacts'
+= react_component 'ResourceIndexRoot',
+    title: 'Contacts',
+    recordsPath: contacts_path(format: 'json'),
+    childComponentNames: { Record: 'ContactRecord' }
