Fix the broken plus circle on tenon rows

--- a/app/views/tenon/tenon_content/_row.html.haml
+++ b/app/views/tenon/tenon_content/_row.html.haml
@@ -5,7 +5,7 @@
       %i.fa.fa-arrows.drag-anchor
 
       = link_to '#', class: 'tn-tc-open-library above', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_title: "Insert Content", modal_handler: 'Tenon.features.tenonContent.Library', modal_clone: 'true', tooltip: '' }, title: 'Insert Content' do
-        = fa_icon('plus-circle')
+        %i.fa.fa-fw.fa-plus-circle
 
       = link_to_remove_association(fa_icon('trash-o'), f, {'data-confirm' => 'Are you sure?', 'data-wrapper-class' => 'tn-tc-row'})
 
@@ -16,4 +16,4 @@
   .tn-tc-bottombar
     .actions
       = link_to '#', class: 'tn-tc-open-library below', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_title: "Insert Content", modal_handler: 'Tenon.features.tenonContent.Library', modal_clone: 'true', modal_closest: '.tn-tc', tooltip: ''}, title: 'Insert Content' do
-        = fa_icon('plus-circle')
+        %i.fa.fa-fw.fa-plus-circle
