--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -1,71 +1,26 @@
-/*
-*= require normalize-rails
-*= require font-awesome
-*= require medium-editor/medium-editor
-*= require medium-editor/themes/bootstrap
-*= require_self
-*/
 
-// third party things
-@import 'bourbon';
-@import 'neat';
-@import 'bootstrap';
-@import 'bootstrap.tables';
-@import 'bootstrap.datetimepicker';
-@import 'jquery.Jcrop';
-@import 'select2';
+// VENDOR
+// ------------------------------------
+//= require font-awesome
+@import './materialize-includes';
+@import './grid/config';
 
-// global mixins
-@import 'tenon/mixins';
+// HELPERS
+// ------------------------------------
+@import './helpers/universal-variables';
 
-// universal variables
-@import 'tenon/colors-named';
-@import 'tenon/colors-custom';
-@import 'tenon/typography';
-@import 'tenon/helpers';
-@import 'tenon/styleguide';
-@import 'tenon/z-indexes';
+// UI ELEMENTS
+// ------------------------------------
+@import './ui/box';
+@import './ui/burger';
 
-// Layouts, try to make one for each different page type
-@import 'tenon/layout/breakpoints';
-@import 'tenon/layout/margins';
-@import 'tenon/layout/grid';
-@import 'tenon/layout/global';
-@import 'tenon/layout/assets';
-@import 'tenon/layout/main-nav';
-@import 'tenon/layout/util-nav';
-@import 'tenon/layout/sidebar';
-@import 'tenon/layout/mobile';
+// LAYOUT
+// ------------------------------------
+@import './layout/main-nav';
+@import './layout/tenon-content/base';
+@import './layout/tenon-content/library';
 
-// UI Components, choose as needed
-@import 'tenon/ui/i18n';
-@import 'tenon/ui/alerts';
-@import 'tenon/ui/asset-attachment';
-@import 'tenon/ui/asset-cropping';
-@import 'tenon/ui/asset-uploads';
-@import 'tenon/ui/buttons';
-@import 'tenon/ui/callouts';
-@import 'tenon/ui/forms';
-@import 'tenon/ui/generic-loader';
-@import 'tenon/ui/header-tools';
-@import 'tenon/ui/list-style-toggle';
-@import 'tenon/ui/login';
-@import 'tenon/ui/medium-editor';
-@import 'tenon/ui/modals';
-@import 'tenon/ui/pagination';
-@import 'tenon/ui/progress-bars';
-@import 'tenon/ui/quick-search';
-@import 'tenon/ui/record-lists';
-@import 'tenon/ui/record-grids';
-@import 'tenon/ui/section-headers';
-@import 'tenon/ui/select2-custom';
-@import 'tenon/ui/tables';
-@import 'tenon/ui/tabs';
-@import 'tenon/ui/tenon-content';
-@import 'tenon/ui/tenon-content-library';
-@import 'tenon/ui/tenon-content-popped-out';
-@import 'tenon/ui/thinking';
-@import 'tenon/ui/toolbox';
-
-// Grab tenon_addons for any host-app requirements
-@import 'tenon_addons';
+body, html {
+  @extend .grey.darken-3;
+  min-height: 100%;
+}
